# Recallo

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Justfile
.cargo/: config.toml
assets/: main.css
scripts/: android-patch.sh  generate_math_data.py
src/: main.rs  util.rs
src/data/: math_words.rs  mod.rs  units.rs  words.rs
src/screens/: category.rs  game.rs  home.rs  known_words.rs  mod.rs  mode_select.rs  results.rs  settings.rs
src/state/: app_state.rs  mod.rs  persistence.rs
